--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,10 +6,13 @@
 body   {
     //gradient from http://uigradients.com
     
-  background: -webkit-linear-gradient(90deg, #FFA17F 10%, #00223E 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #FFA17F 10%, #00223E 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #FFA17F 10%, #00223E 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #FFA17F 10%, #00223E 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #FFA17F 10%, #00223E 90%); /* W3C */
+  
+  background: -webkit-linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* W3C */
+        
+        
         
 }
